--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "author": "subramanyam963@gmail.com",
   "license": "MIT",
   "peerDependencies": {
-    "eslint": "^4.17.0",
-    "eslint-plugin-react": "^7.6.1"
+    "eslint": "4.17.0",
+    "eslint-plugin-react": "7.6.1"
   },
   "devDependencies": {
-    "eslint-plugin-react": "^7.6.1"
+    "eslint-plugin-react": "7.6.1"
   }
 }
